addons/care_config_relaunch_v2/static/src/css/care_multipage.css
/* ... */
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd-checkout-box .price_donate_suggested_outer:nth-child(odd),
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd-checkout-box .form-group.price_donate:nth-child(odd) {
    margin-right: 12.5px !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd-checkout-box .price_donate_suggested_outer:nth-child(even),
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd-checkout-box .form-group.price_donate:nth-child(even) {
    margin-left: 12.5px !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd-checkout-box .price_donate_suggested_outer input[type=button] {
    font-family: Merriweather;
    font-size: 72px;
    font-weight: bold;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: normal;
    text-align: right;
    width: 100%;
    height: 100%;
    outline: 0px;
    background-color: transparent;
    border: 0;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd-checkout-box .price_donate_suggested_outer::before,
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd-checkout-box .form-group.price_donate::before {
    font-family: Merriweather;
    font-size: 24px;
    font-weight: bold;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: normal;
    color: #222;
    content: "€";
    position: relative;
    left: 14px;
    top: 13.5px;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd-checkout-box .form-group.price_donate::after {
    content: url(/care_config_relaunch_v2/static/src/img/pencil.svg);
    position: relative;
    width: 42px;
    height: 42px;
    right: 14px;
    top: calc(116.8px - 42px - 16px);
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd-checkout-box .form-group.price_donate .input-group-addon {
    display: none;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd-checkout-box .form-group.price_donate .input-group.input-group-lg {
    display: inline-block;
    margin: 0;
    margin-left: -17px; /* offest for euro symbol */
    padding: 0;
    border-radius: 7px;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd-checkout-box #price_donate {
    font-family: Merriweather;
    font-size: 72px;
    font-weight: bold;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: normal;
    text-align: right;

    margin: 0;
    padding: 0;
    width: calc(100% - 22px); /* Offset pencil image */
    height: 100% !important;
    border: 0;
    background-color: transparent;
    box-shadow: none;
}

/* Chrome, Safari, Edge, Opera hider number buttons */
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd-checkout-box #price_donate::-webkit-outer-spin-button,
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd-checkout-box #price_donate::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox hide number buttons */
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd-checkout-box input[type=number]#price_donate {
  -moz-appearance: textfield;
}

/* Checkout Step idicators */

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#product_detail {
    display: flex;
    flex-flow: column;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
.wsd_checkout_pages_header {
    order: 1;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd_checkout_steps_nav .checkout_steps_navigation {
    display: inline-block;
    margin: 0;
    padding: 0;
    min-height: unset;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd_checkout_steps_nav ul li {
    border-radius: 50%;
    width: 13px;
    height: 13px;
    border: 1px solid black;
    background-color: white !important;
    margin: 4.5px;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd_checkout_steps_nav ul li.active {
    border-radius: 50%;
    width: 13px;
    height: 13px;
    border: 1px solid #e36f1e;
    background-color: #e36f1e !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd_checkout_steps_nav ul li a {
    display: none;
}

/* Hide lock symbol */
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
.lock-sign,
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
.lock-text {
    display: none;
}

/* Panels */
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
.panel.panel-default {
    border: none;
}
/* ... */

